[package]
authors = ["Sean Bowe <ewillbefull@gmail.com>, CPerezz <carlos@dusk.network>"]
description = "Fork of the implementation of the BLS12-381 pairing-friendly elliptic curve construction with some extra tooling needed by the Dusk team"
documentation = "https://github.com/dusk-network/bls12_381"
homepage = "https://github.com/dusk-network/bls12_381"
license = "MIT/Apache-2.0"
name = "plonk-bls12_381"
repository = "https://github.com/dusk-network/bls12_381"
version = "0.1.0"
keywords = ["cryptography", "bls12_381", "zk-snarks", "ecc", "elliptic-curve"]
categories =["Algorithms", "Cryptography", "Development tools"]
edition = "2018"
exclude = [".github/workflows/ci.yml",
".gitignore",
]

[dependencies]
byteorder = {version = "1.4.3", default-features = false}
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
rand_core = {version="0.6", default-features = false, path = "../rand/rand_core"}
canonical = {version = "0.6", optional = true}
canonical_derive = {version = "0.6", optional = true}
dusk-bytes = { version = "0.1", default-features = false }
parity-scale-codec = { version = "2.0", default-features = false, features = ["derive"] }
sp-std = { default-features = false, version = '3.0.0' }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dev-dependencies]
criterion = "0.2.11"
bincode = "1"

[[bench]]
name = "groups"
harness = false
required-features = ["groups"]

[dependencies.parity-subtle]
version = "0.1.1"
default-features = false

[features]
canon = ["canonical", "canonical_derive"]
